--- a/Visualisateur/Visualisateur/MainWindow.xaml
+++ b/Visualisateur/Visualisateur/MainWindow.xaml
@@ -1,10 +1,7 @@
 ﻿<Window x:Class="Visualisateur.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Visualisateur"
-        mc:Ignorable="d"
+        xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
         Title="Connexion" Height="350" Width="525">
     <Grid>
         <Button x:Name="btn_create" Content="Créer" HorizontalAlignment="Left" Height="21" Margin="50,264,0,0" VerticalAlignment="Top" Width="104" Click="Btn_create_Click"/>
