--- a/Visualisateur/Visualisateur/Windows/LibraryWindow.xaml
+++ b/Visualisateur/Visualisateur/Windows/LibraryWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:local="clr-namespace:Visualisateur.Windows"
-        Title="Librairie" Height="700" Width="800">
+        Height="700" Width="800">
     <Grid Name ="main" Margin="10,10,10,10">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -19,6 +19,10 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="btn_lastPage" Content="Dernière page" Grid.Column="1" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="4" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="btn_previousPage" Content="Précédent" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center" Width="130" Click="Btn_previousPage_Click"/>
+        <Button x:Name="btn_firstPage" Content="Première" Grid.Column="0" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center" Width="130" Click="Btn_firstPage_Click"/>
+        <Button x:Name="btn_nextPage" Content="Suivante" Grid.Column="3" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center" Width="130" Click="Btn_nextPage_Click"/>
+        <Button x:Name="btn_lastPage" Content="Dernière" Grid.Column="4" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center" Width="130" Click="Btn_lastPage_Click"/>
+        <Label x:Name="lbl_currentPage" Content="1" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center" Width="40" HorizontalContentAlignment="Center"/>
     </Grid>
 </Window>
