--- a/Visualisateur/Visualisateur/MainWindow.xaml
+++ b/Visualisateur/Visualisateur/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Visualisateur.MainWindow"
+﻿<Controls:MetroWindow x:Class="Visualisateur.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
@@ -19,6 +19,5 @@
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
         </Grid>
-       
     </Grid>
-</Window>
+</Controls:MetroWindow>
