--- a/Visualisateur/Visualisateur/Windows/CreateWindow.xaml
+++ b/Visualisateur/Visualisateur/Windows/CreateWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Visualisateur.Windows.CreateWindow"
+﻿<Controls:MetroWindow x:Class="Visualisateur.Windows.CreateWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -15,4 +15,4 @@
         <Label x:Name="label_Copy" Content="Entrer le pseudonyme de l'utilisateur : " HorizontalAlignment="Center" Height="25" Margin="0,95,0,0" VerticalAlignment="Top" Width="210"/>
 
     </Grid>
-</Window>
+</Controls:MetroWindow>
