--- a/Visualisateur/Visualisateur/Windows/LibraryWindow.xaml
+++ b/Visualisateur/Visualisateur/Windows/LibraryWindow.xaml
@@ -1,9 +1,14 @@
-﻿<Window x:Class="Visualisateur.Windows.LibraryWindow"
+﻿<metro:MetroWindow x:Class="Visualisateur.Windows.LibraryWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+        xmlns:metro="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:local="clr-namespace:Visualisateur.Windows"
         Height="700" Width="800">
+    <metro:MetroWindow.RightWindowCommands>
+        <metro:WindowCommands>
+            <Button Name ="Setting" Content="settings" Click="Btn_Setting_Click"/>
+        </metro:WindowCommands>
+    </metro:MetroWindow.RightWindowCommands>
     <Grid Name ="main" Margin="10,10,10,10">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -25,4 +30,4 @@
         <Button x:Name="btn_lastPage" Content="Dernière" Grid.Column="4" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center" Width="130" Click="Btn_lastPage_Click"/>
         <Label x:Name="lbl_currentPage" Content="1" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center" Width="40" HorizontalContentAlignment="Center"/>
     </Grid>
-</Window>
+</metro:MetroWindow>
